--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,21 +5,14 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'go_gin_gonic'
-      # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
-      # You can use whatever password you like
       MYSQL_PASSWORD: '1234'
-      # Password for root access
       MYSQL_ROOT_PASSWORD: 'root@1234'
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
       - '3306:3306'
     expose:
-      # Opens port 3306 on the container
       - '3306'
-      # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
+      - mysql_db_volume:/var/lib/mysql
 volumes:
-  my-db:
+  mysql_db_volume:
